# cabal-check-test

./: .gitignore  README.md  cabal-check-test.cabal  cabal.project  flake.nix  hie.yaml
internal-lib/Lib/: Internal.hs
src/: Lib.hs
test/unit/: Main.hs
