cabal-version:      3.0
name:               cabal-check-test
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.8.2
copyright:          2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/cabal-check-test/
bug-reports:        https://github.com/tbidne/cabal-check-test/issues
synopsis:           A synopsis
description:        Some description
category:           Test
extra-source-files:
  .gitignore
  cabal.project
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/cabal-check-test

common common-lang
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules: Lib
  build-depends:
    , base  >=4.14.0.0 && <4.21
    , text  >=1.2.3.2  && <2.2

  hs-source-dirs:  src

library internal-lib
  import:          common-lang

  -- can be public, doesn't matter
  visibility:      private
  exposed-modules: Lib.Internal
  build-depends:
    , base
    , text

  hs-source-dirs:  internal-lib

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , cabal-check-test
    , internal-lib
    , text

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N
